# raif

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile  wireless_ops.md
docs/design/: architecture.md
examples/: CMakeLists.txt  simple_example.cpp
examples/image_classification/: image_classification.cpp  simple_resnet.py  simple_resnet_manual.cpp
include/raif/: relu.h  runtime.h
include/runtime/: activation.h  batchnorm.h  convolution.h  engine.h  fft.h  fir.h  flatten.h  fully_connected.h  pooling.h
kernels/cpu/signal/: fft.cpp  fft.h  fir.cpp  fir.h
kernels/cpu/winograd/: winograd_conv.cpp  winograd_conv.h
src/: CMakeLists.txt
src/backends/: CMakeLists.txt
src/core/: engine.cpp
src/ops/: CMakeLists.txt  activation.cpp  batchnorm.cpp  convolution.cpp  fft.cpp  fir.cpp  flatten.cpp  fully_connected.cpp  pooling.cpp  relu.cpp
src/quantization/: CMakeLists.txt
src/runtime/: runtime.cpp
src/utils/: CMakeLists.txt
test/: test_main.cpp
tests/: CMakeLists.txt  test_main.cpp
tools/: benchmark_runner.py
tools/code_generator/: generate_op_template.py
tools/model_optimizer/: onnx_transformer.py
